hmecloud/client/src/components/Report/SummaryReport.css
/* ... */
.timeSpan{
  color: #D41B3E;
  font-weight: bold;
}

.timeMeasureColumn:hover{
  cursor: pointer;
  text-decoration: underline;
}

/* .goalstatistics-table td{
  width: 175px;
} */

.goalStatistics-row{
  margin-bottom: 5px;
}

h2 .report-start-time, h2 .report-end-time{
  font-size: 14px;
  color: #008898;
  line-height: 20px;
  font-weight: 800;
}
h2 .report-start-time-value,h2 .report-end-time-value{
  color: #008898;
  font-size: 14px;
  line-height: 20px;
  font-weight: 100;
  margin-left: 5px;
  text-transform: uppercase;
}
.store-error{
  font-size: 9px;
  position: absolute;
  color:#d41b3e;
}

.report-start-time-header, .report-end-time-header{
  margin-top:0px;
}
.report-print-time-header{
    color: #959595;
    margin-top : 0px;
}

.report-print-time, .report-print-time-value{
  font-weight: 100;
  text-transform: uppercase;
  text-transform: uppercase;
  font-size: 14px;
  line-height: 20px;
}
.from-to-detail{
  color:#008898;
  /* margin-bottom: 5px; */
  font-size: 12px;
  margin-bottom: 10px;
  font-weight: bold;
  text-transform: uppercase;
}
.show-all-pagination-toggle{
  text-align : right;
  font-size: 12px;
  margin-top: 14px;
  font-weight: bold;
}
.left-padding-none{
  padding-left : 0px;
}
.right-padding-none{
  padding-right : 0px !important;
}
.show-all-single{
  margin-top: -18px;
  text-align: right;
  margin-right: 55px;
}
#page-navigations{
  color: #D41B3E;
  margin-top:12px;
}
.page-navs{
  display : inline-block;
  float:left;
  margin-right: 2px;
}

.previous-link, .next-link{
  float: left;
  border: 1px solid white;
  background-color: red;
  width: 20px;
  height: 20px;
  display : inline-block;
  cursor : pointer;
}
.previous-page{
  font-size: 18px !important;
  color: white;
  margin-left: 5px;
}
.next-page{
  font-size: 18px !important;
  color: white;
  margin-left: 5px;
}
.start-page{
  border: 1px solid #D41B3E;
  padding: 0px 4px 0px 3px;
}
.report-data-unit, .goalstatistics-data-unit{
  margin-top:20px;
}
.active-link{
  color: rgb(0, 136, 152);
  text-decoration: underline;
  cursor: pointer;
}
.inactive-link{
  cursor: pointer;
  color: #D41B3E;
}

.show-all-multi{
  margin-right : 40px;
}

/* Goal Statistics css starts here*/
.goalstatistics-table tr th.blankHeader{
  background: none;
  border: 0px;
  height: 23px;
  font-size: 12px;

  width : 125px;
}

.goalstatistics-table tr.goalstatistics-row-heading th.blank-heading{
  background: none;
}

.goalstats-title{
  width : 125px;
}

.goalstatistics-table tr th.tableHeading{
  background: #959595;
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  border-right: 1px solid #FFFFFF;
  border-bottom: 0px solid #959595;
  height: 23px;
  font-size: 12px;
}

.goalstatistics-table th{
  background-color: #0087a1;
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  color: white;
  height: 36px;
  vertical-align: middle;
}
.goalstatistics-table th.groupsColHeader,.goalstatistics-table th.storesColHeader{
      width: 125px;
}
.goalstatistics-table th.reportTableAttributesHeading{
  font-size: 10px;
  font-weight: normal;
      width: 175px;
}
.goalstatistics-table th.reportTableAttributesHeading:first-child{
  width: 125px;
}

.goalstatistics-table td{
  border-top: 1px solid #FFFFFF;
  /* border-left: 1px solid #FFFFFF; */
  text-align: center;
  vertical-align: middle;
  height: 21px;
  min-width:120px;
}

.goalstatistics-table tr:first-child td:first-child {
  border-right: 1px solid #FFFFFF;
  min-width: 150px;
  max-width: 150px;
}
.goalstatistics-table td:first-child{width: 125px;
}

.goalstatistics-table tr th{
  text-align : center;
}
.goalstatistics-table{
  /* border-bottom: 1px solid grey; */
  border-bottom: 1px solid #aeaeae;
  margin-bottom: 5px;
}

.goalstatistics-table.goalstatistics-table-content{
  font-size: 12px;
  font-weight: normal;
  border-bottom: 1px solid #aeaeae;
  width: 1005px;/* newly added */
}

.goalstatistics-table.goalstatistics-table-header{
  border-bottom: none;
  width: 1005px;/* newly added */
}
.goalstatistics-header-text{
  color: #008898;
  font-size: 17px;
  line-height: 20px;
  font-weight: 800;
  text-transform: uppercase;
}

/* Goal Statistics css ends here*/




/* Raw Car Data CSS*/

.emailCSV {
    padding: 10px;
    margin: 10px 15px;
    background-color: #d41b3e !important;
    border: none;
    color: #ffffff;
    cursor: pointer;
}


.rawcar-data-section{
  /* margin: 20px 68px 0px 68px; */
}

tr.raw-car-subheaders th:nth-child(1),tr.raw-car-subheaders th:nth-child(2){
  width: 226px;
}
tr.raw-car-subheaders th{
  width: 113px;
}


.clear:after {
  clear: both;
  content: ".";
  display: block;
  font-size: 0;
  height: 0;
  visibility: hidden;
}
table .raw-car-header-labels {
  border-bottom: 0px solid #d1d1d1;
}
table .th {
  align-items: left;
}
.rawcar-header-labels {
  font-size: 12px;
  margin-left: 10px;
  padding-top: 8px;
  padding-bottom: 8px;
  text-align: left;
  width: 850px;
}
.rawcar-table-details {
  margin-left: 1em;
}
.thin-header {
  width: 115px;
}
.rawcar-header {
  border: 1px solid #ffffff;
  display: table;
  height: 36px;
}
.rawcar-h1 {
  margin-top: 10px;
}
.rawcar-h2 {
  color: #0087a1;
  /* margin-left: 7.5em; */
  font-weight: bolder;
  font-size: 18px;
  margin-top: 10px;
}
.display-records {
  border-collapse: collapse;
  /* border-spacing: 0px; */
  font-size: 12px;
  float: left;
  padding-top: 0px;
  width: 1130px;
}
.table-layout {
  margin-top: 0px;
  margin-bottom: 25px;
  width: 1125px;
}
.table-layout th {
  /* font-weight: bold; */
  font-size:12px;
  height: 30px;
}
.table-layout th span{
  /* font-weight: bold; */
  font-size:10px;
  height: 30px;
}

.table-layout th{
	/* background:url(/images/th_background_up.png); */
	background-color: #0087a1;
	border-top:1px solid #FFFFFF;
	border-left:1px solid #FFFFFF;
	color:white;
    vertical-align:middle;
    text-align: center;
}
.display-result{
    background-color: #ffffff;
    text-align: center
}
/* ... */

